# work

./: test.ipynb
Thing_Shadow/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Thing_Shadow/components/apps/: CMakeLists.txt  app_button.c  app_common.c  app_control_operations.c  app_i2c_bus.c  app_xl9555.c
Thing_Shadow/components/apps/include/: app_button.h  app_common.h  app_control_operations.h  app_i2c_bus.h  app_xl9555.h
Thing_Shadow/components/button/: CMakeLists.txt  iot_button.c
Thing_Shadow/components/i2c_bus/: CMakeLists.txt
Thing_Shadow/components/iot_adc/: CMakeLists.txt  iot_adc.c
Thing_Shadow/components/xl9555/: CMakeLists.txt  component.mk  xl9555.c
Thing_Shadow/main/: .gitignore  CMakeLists.txt  app_main.c  main2.c  shadow_demo_helpers.c  shadow_demo_main.c  test.c
Thing_Shadow/main/certs/: client.crt  client.key
c++base/: 1.1.cpp  12.cpp  123.cpp  13.cpp  15.cpp  1992.cpp  991.cpp  992.cpp  CMakeLists.txt  c++笔记.md  readme.md  students.txt  多继承.md  继承.md
c++base/01class/: 1.cpp  2.cpp  3.cpp  4.cpp  C++对c的扩展.md  CMakeLists.txt
c++base/01class/fun/: CMakeLists.txt  fun.c  fun.h
c++base/0cmake/: 2.cpp  CMakeLists.txt  cmake教程.md
c++base/10/: 5.cpp  CMakeLists.txt
c++base/10string/: 1.cpp  2.cpp  3.cpp  4.cpp  6.cpp  lambda.md  run.ps1  string.md
c++base/11vector/: 1.cpp  2.cpp  vector.md
c++base/12deque/: 1.cpp  deque.md
c++base/13stack/: 1.cpp  stack.md
c++base/14queue/: 1.cpp  queue.md
c++base/14queue copy/: 1.cpp
c++base/15list/: list.md
c++base/16智能指针/: 1.cpp  智能指针.md
c++base/1class/: 1.cpp  2.cpp  3.cpp  5.cpp  CMakeLists.txt  类.md
c++base/1class/include/: data.h  data.hpp
c++base/2Constructor/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  CMakeLists.txt  构造函数.md  构造函数初始化列表.md
c++base/2gouzao/: 3.cpp  构造函数.md
c++base/3operator/: 1.cpp  2.cpp  运算符重载.md
c++base/4static_member_function/: 1.cpp  CMakeLists.txt  静态成员教程.md
c++base/5继承/: 1.cpp  2.cpp  3.cpp  继承.md
c++base/6继承的构造/: 1.cpp  2.cpp  3.cpp  4.cpp  继承.md
c++base/7多态与继承/: 1.cpp  多继承.md
c++base/8函数模板/: 1.cpp  1、aws 全量ota测试.md  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  模版.md
c++base/9lambda/: 1.cpp  2.cpp  lambda.md
c++base/WorkerManager/: CMakeLists.txt  run.ps1
c++base/WorkerManager/WorkerManager/: CMakeLists.txt  Worker.cpp  Worker.h  WorkerManager.cpp  WorkerManager.h  boss.cpp  boss.h  employee.h  manager.h
c++base/array-class-map/: 1.cpp  2.cpp  map.md
c++base/explicit/: 1.cpp
c++base/is_name/: 1.cpp  isname.md
c++base/return-type/: 1.cpp  2.cpp  3.cpp
c++base/test/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
c++base/tuple/: 1.cpp  tuple.md
c++base/友元/: 1.cpp  run.ps1  友元.md
cmake/: directory_tree.txt  教程.md
cmake/A-hello-cmake/: CMakeLists.txt  main.cpp
cmake/B-hello-headers/: CMakeLists.txt
cmake/B-hello-headers/include/: Hello.h
cmake/B-hello-headers/src/: main.cpp  (+1 more)
cmake/C-hello-headerslib/: CMakeLists.txt  main.cpp
cmake/G-compile-flags/: CMakeLists.txt  main.cpp
cmake/Step1/: CMakeLists.txt  tutorial.cpp
cmake/Step2/: CMakeLists.txt  tutorial.cxx
cmake/Step3/: CMakeLists.txt
cmake/Step3/MathFunctions/: CMakeLists.txt
cmake/Step5/: CMakeLists.txt  Untitled-1.md
cmake/Step6/: CMakeLists.txt
cmake/Step6.1/: CMakeLists.txt  CTestConfig.cmake  func.cmake  if.cmake  list.cmake
(+20 files in other folders)
